# spVCF

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  Dockerfile  README.md  SPEC.md  spvcf.wdl
.github/workflows/: build.yml
doc/: 1000G_NYGC_GATK.md  SPEC.md  compression_results.md
src/: main.cc  spVCF.cc  spVCF.h  strlcpy.h
test/: spVCF.t  spvcf.wdl  test_spvcf.wdl
